<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/back_primary"
    tools:context=".ui.fragments.addEdit.AddEditTaskFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/back_primary"
        android:fitsSystemWindows="true"
        app:elevation="4dp"
        app:liftOnScroll="true"
        app:liftOnScrollTargetViewId="@id/nestedScrollView">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/back_primary">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/closeButton"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_close"
                app:iconTint="?attr/label_primary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveButton"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textAppearance="@style/TextStyle.Button"
                android:textColor="?attr/color_blue" />
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView"
                style="@style/Widget.Material3.CardView.Elevated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:cardBackgroundColor="?attr/back_secondary">

                <EditText
                    android:id="@+id/todoTextEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:hint="@string/enter_task"
                    android:inputType="textMultiLine"
                    android:minHeight="104dp"
                    android:padding="16dp"
                    android:textColorHint="?attr/label_tertiary" />
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:id="@+id/importanceButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardView">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/importanceTitleTextView"
                    style="@style/TextStyle.Body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/priority" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/importanceTextView"
                    style="@style/TextStyle.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:textColor="?attr/label_tertiary"
                    tools:text="нет" />
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/deadLineButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="40dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/deadlineTitleTextView"
                    style="@style/TextStyle.Body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deadline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/deadlineTextView"
                    style="@style/TextStyle.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="?attr/color_blue"
                    app:layout_constraintStart_toStartOf="@id/deadlineTitleTextView"
                    app:layout_constraintTop_toBottomOf="@id/deadlineTitleTextView"
                    tools:text="2 июня 2021" />

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/deadlineSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:trackTint="@color/switch_color" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/deleteButton"
                style="@style/TextStyle.Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="12dp"
                android:paddingTop="22dp"
                android:paddingBottom="24dp"
                android:text="@string/delete"
                android:textColor="?attr/color_red"
                app:drawableStartCompat="@drawable/ic_delete"
                app:drawableTint="?attr/color_red" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>