<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/back_primary"
    tools:context=".ui.fragments.TasksFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/back_primary"
        android:fitsSystemWindows="true"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@style/TextStyle.Title"
            app:expandedTitleMarginBottom="52dp"
            app:expandedTitleMarginStart="60dp"
            app:expandedTitleTextAppearance="@style/TextStyle.LargeTitle"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="@string/my_tasks"
            app:titleCollapseMode="scale"
            app:toolbarId="@id/toolBar">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="pin" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/showUncompletedItemsCheckBox"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end|bottom"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:button="@drawable/visibility_drawable"
                app:buttonTint="?attr/color_blue" />

            <TextView
                android:id="@+id/amountCompletedTextView"
                style="@style/TextStyle.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="60dp"
                android:layout_marginBottom="18dp"
                android:text="@string/done_amount"
                android:textColor="?attr/label_tertiary"
                app:layout_collapseMode="parallax" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.Material3.CardView.Elevated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="28dp"
                android:backgroundTint="?attr/back_secondary"
                android:paddingVertical="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:itemCount="5"
                        tools:listitem="@layout/todo_list_item" />

                    <LinearLayout
                        android:id="@+id/addNewTaskButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="horizontal"
                        android:paddingHorizontal="16dp"
                        android:paddingVertical="12dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_add"
                            app:tint="?attr/label_tertiary" />

                        <TextView
                            style="@style/TextStyle.Body"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="12dp"
                            android:text="@string/add_new"
                            android:textColor="?attr/label_tertiary" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </FrameLayout>


    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="?attr/color_blue"
        app:srcCompat="@drawable/ic_add"
        app:tint="@color/white" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>